--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,7 @@
     display: flex;
     max-width: 1184px;
     
-    
+    padding-top: 92px;
     margin: 0 auto;
     justify-content: space-between;
 }
