--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,8 +4,8 @@
     display: flex;
     margin-left: 0;
     padding-left: 0;
-    align-items: center;
-    
+    padding-top: 92px;
+    padding-bottom: 24px;
     
     
 }
