--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,7 +8,6 @@ text-align: center;
 color: #FFFFFF;
 margin: 0;
 margin-top: 56px;
-
 }
 @media screen and (max-width: 1024px) {
     .lead__title {
@@ -21,5 +20,7 @@ margin-top: 56px;
         max-width: 500px; 
         font-size:44px ;   
         line-height: 50px;
+        max-width: 288px;
         }
     }
+
