--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -10,3 +10,9 @@ padding-bottom: 24px;
 }
 
 
+@media screen and (max-width:768px){
+    .place__paragraph{
+        font-size: 16px;
+        
+    }
+}
