--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,18 +1,19 @@
 .cover__subtitle {
-font-size: 18px;
-line-height: 22px;
-/* or 122% */
-text-align: center;
-margin: 0 auto;
-color: #FFFFFF;
-max-width: 360px;
-padding-top: 32px;
-text-align: center;
-z-index: 1;
+    font-size: 18px;
+    line-height: 22px;
+    /* or 122% */
+    text-align: center;
+    margin: 0 auto;
+    color: #FFFFFF;
+    max-width: 360px;
+    padding-top: 32px;
+    text-align: center;
+    z-index: 1;
 }
 
 @media screen and (max-width: 550px) {
     .cover__subtitle {
         font-size: 14px;
         line-height: 16px;
-    }}
+    }
+}
