--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,5 @@
 .lead__title {
 max-width: 720px;
-font-style: normal;
-font-weight: 900;
 font-size: 96px;
 line-height: 100px;
 text-align: center;
@@ -15,12 +13,17 @@ margin-top: 56px;
     }
 }
 
-    @media screen and (max-width: 700px) {
-        .lead__title {
+@media screen and (max-width: 700px) {
+    .lead__title {
         max-width: 500px; 
         font-size:44px ;   
         line-height: 50px;
         max-width: 288px;
         }
     }
-
+@media screen and (max-width: 320px){
+    .lead__title {
+        font-size: 40px;
+        line-height: 44px;
+    }
+}
